stacked buttons vertically to prevent wrapping

--- a/titlePage.css
+++ b/titlePage.css
@@ -187,18 +187,19 @@ body {
   }
   
   #findMore {
-    display: inline-block;
+    display: block;
     background-color: rgb(13, 179, 13);
     color: #fff;
     border: none;
     border-radius: 10px;
     box-shadow: 0 3px #999;
+    margin: 5% auto;
   }
 
   .favoriteButtonContainer{
     position: relative;
-    display: inline;
-    margin-left: 8%;
+    transform: translateX(-6%);
+    text-align: center;
   }
   .loveIt, .removeFav{
     border-radius: 10px;
@@ -215,17 +216,21 @@ body {
   }
   
   #reset {
+    display: block;
     background-color: red;
     outline: none;
     border: none;
     border-radius: 10px;
     box-shadow: 0 3px #999;
+    margin: 5% auto;
   }
   
   #goThere {
+    display: block;
     background-color: green;
     border-radius: 10px;
     box-shadow: 0 3px #999;
+    margin: 5% auto;
   }
   
   #goThere:hover {
@@ -371,17 +376,9 @@ body {
     left:50%;
     transform: translateX(-50%);
     width:107%;
+    text-align: center;
   }
 
-  #findMore{
-    left:3%;
-    margin:1%
-  }
-
-  #reset{
-    left:0%;
-    margin: 1%;
-  }
 
   .yelpTitle, .yelpInfo {
     position: relative;
@@ -403,10 +400,5 @@ body {
     margin-top:5%;
   }
 
-  .favoriteButtonContainer{
-    display:block;
-    left:31%;
-    margin:2%;
-  }
   
 }
